[package]
name = "web-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
async-trait = "0.1.72"
bcrypt = "0.15.0"
chrono = "0.4.29"
dotenv = "0.15.0"
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.181", features = ["derive"]}
serde_json = "1.0.104"
tokio = {version = "1.29.1", features = ["full"]}
